bk_ida/gccida/c3/asm_output_aligned_bss
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_output_aligned_bss/src/varasm.c:1032:32: error: use of undeclared identifier 'off_8A2198'
fprintf( file, ( const char *)&off_8A2198 + 4, "\t.zero\t", v7); 
                               ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/asm_output_aligned_bss/src/obj/varasm.o] Error 1
